--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,9 @@
 {
-    "python.pythonPath": "C:\\Users\\Uday Kumar Madarapu\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe",
-    "python.testing.unittestArgs": [
-        "-v",
-        "-s",
-        "./problem 7",
-        "-p",
-        "*test.py"
-    ],
-    "python.testing.pytestEnabled": false,
-    "python.testing.nosetestsEnabled": false,
-    "python.testing.unittestEnabled": false,
-    "python.testing.promptToConfigure": false
+  "python.pythonPath": "C:\\Users\\Uday Kumar Madarapu\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe",
+  "python.testing.unittestArgs": ["-v", "-s", "./problem 7", "-p", "*test.py"],
+  "python.testing.pytestEnabled": false,
+  "python.testing.nosetestsEnabled": false,
+  "python.testing.unittestEnabled": false,
+  "python.testing.promptToConfigure": false,
+  "git.ignoreLimitWarning": false
 }
